--- a/PDE.Web/Views/Miembros/Details.cshtml
+++ b/PDE.Web/Views/Miembros/Details.cshtml
@@ -107,14 +107,14 @@
                     <input asp-for="Celular" class="form-control" autocomplete="off" readonly="readonly" />
                 </div>
                 <div class="col-md-6 form-group">
-@*                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
-                    <input value="@Model.Localidad.Nombre" class="form-control" readonly="readonly" />*@
+                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
+                    <input value="@Model.Localidad.Nombre" class="form-control" readonly="readonly" />
                 </div>
             </div>
             <div class="row">
                  <div class="col-md-6 form-group">
-@*                    <label asp-for="CargoId" class="control-label">Cargo Territorial</label>                    
-                    <input value="@Model.Cargo.Descripcion" class="form-control" readonly="readonly" />*@
+                    <label asp-for="CargoId" class="control-label">Cargo Territorial</label>                    
+                    <input value="@Model.Cargo.Descripcion" class="form-control" readonly="readonly" />
                 </div>
                 <div class="col-md-6 form-group">
                     <label asp-for="SupervisorId" class="control-label">Supervisor</label>                    
