--- a/PDE.Web/Views/Miembros/Index.cshtml
+++ b/PDE.Web/Views/Miembros/Index.cshtml
@@ -58,7 +58,7 @@
                 @item.Celular
             </td>
             <td>
-                @item.CargoTerritorial.Cargo.Descripcion
+                @item.Cargo.Descripcion
             </td>
             <td>
                 @(item.Supervisor.Nombres +" "+ item.Supervisor.Apellidos)
