--- a/PDE.Web/Views/Home/Login.cshtml
+++ b/PDE.Web/Views/Home/Login.cshtml
@@ -14,7 +14,7 @@
         <meta name="author" content="" />
         <title>Login</title>
         <link href="~/css/styles.css" rel="stylesheet" />
-        <script src="~/lib/fontawesome-free-6.1.1-web/js/all.min.js"></script>
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
@@ -69,7 +69,7 @@
                 </footer>
             </div>
         </div>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="~/js/scripts.js"></script>
     </body>
 </html>
