--- a/PDE.Web/Views/Miembros/partial/_createForm.cshtml
+++ b/PDE.Web/Views/Miembros/partial/_createForm.cshtml
@@ -101,26 +101,21 @@
                     <span asp-validation-for="Celular" class="text-danger"></span>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label for="LocalidadId" class="control-label">Localidad</label>
-@*                    <select asp-for="LocalidadId" asp-items="@ViewBag.Localidades" class="form-control">
+                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
+                    <select asp-for="LocalidadId" asp-items="@ViewBag.Localidades" class="form-control">
                         <option >--Seleccione una localidad--</option>
-                    </select>*@
-                    @Html.DropDownList("LocalidadId", ViewBag.Localidades as SelectList,"--Seleccione una localidad--",new { @class="form-control"})
+                    </select>
                 </div>
             </div>
             <div class="row">
                  <div class="col-md-6 form-group">
-                    <label for="CargoId" class="control-label">Cargo Territorial</label>                    
-                    <select asp-for="CargoTerritorialId" class="form-control">
-                        <option >--Seleccione un Cargo Territorial--</option>
-                    </select>
-                    <span asp-validation-for="CargoTerritorialId" class="text-danger"></span>
+                    <label asp-for="CargoId" class="control-label">Cargo Territorial</label>                    
+                    <select asp-for="CargoId" class="form-control"></select>
+                    <span asp-validation-for="CargoId" class="text-danger"></span>
                 </div>
                 <div class="col-md-6 form-group">
                     <label asp-for="SupervisorId" class="control-label">Supervisor</label>      
-                    <select asp-for="SupervisorId" class="form-control">
-                        <option >--Seleccione un supervisor--</option>
-                    </select>
+                    <select asp-for="SupervisorId" class="form-control"></select>
                 </div>
             </div>
             <hr />
